--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "node app.js 3000"
   },
   "dependencies": {
-    "express": "^4.16.3",
+    "hapi": "^17.5.2",
     "nodemon": "^1.17.5",
     "sqlite3": "^4.0.1"
   }
