--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "hapi": "^17.5.2",
     "node-forge": "^0.7.5",
     "nodemon": "^1.17.5",
-    "sqlite3": "^4.0.1"
+    "sqlite-cipher": "^0.3.6"
   }
 }
