--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "install":"node setup/dir.js",
     "start": "nodemon app.js 8000",
     "dev": "nodemon app.js 3000"
   },
   "dependencies": {
     "hapi": "^17.5.2",
+    "mkdirp": "^0.5.1",
     "node-forge": "^0.7.5",
     "nodemon": "^1.17.5",
     "sqlite-cipher": "^0.3.6"
