Initial release of registration api with new library bcrypt for hashing and storing psw

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon app.js 3000"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "hapi": "^17.5.2",
     "node-forge": "^0.7.5",
     "nodemon": "^1.17.5",
