token sessione aggiunto

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "bcrypt": "^2.0.1",
     "hapi": "^17.5.2",
-    "hapi-auth-cookie": "^9.0.0",
     "mkdirp": "^0.5.1",
+    "moment": "^2.22.2",
     "node-forge": "^0.7.5",
     "nodemon": "^1.17.5",
     "sqlite-cipher": "^0.3.6"
