--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^2.0.1",
     "hapi": "^17.5.2",
+    "joi": "^13.4.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.2",
     "node-forge": "^0.7.5",
