--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.22.2",
     "node-forge": "^0.7.5",
     "nodemon": "^1.17.5",
+    "readline-sync": "^1.4.9",
     "sqlite-cipher": "^0.3.6",
     "vision": "^5.3.3"
   }
