--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "install": "node setup/dir.js",
-    "start": "nodemon app.js 8000"
+    "start": "node app.js 8000",
+    "dev": "nodemon app.js 8000"
   },
   "dependencies": {
     "bcrypt": "^2.0.1",
